# meetup-2.25-kdense

./: .gitmodules  AGENTS.md  CLAUDE.md  NISTEN-TOOL-CALLING-GUIDE-STATEFUL-WEBAPPS.md  README.md  bootstrap.sh  mise.toml  modal_app.py  pyproject.toml
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
.commandcode/taste/: taste.md
.dolt/: sql-server.info
.letta/: settings.json  settings.local.json
95/3b9b388c93/: metadata.json
95/3b9b388c93/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
95/3b9b388c93/1/: metadata.json
beads/.dolt/noms/: manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
beads_ANIME/.dolt/noms/: journal.idx  manifest  vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv
docs/: analysis.md  anime-studio-stream-mvp-research-2026-02-25-copy-2.md  anime-studio-stream-mvp-research-synthesis-2026-02-25.md
media/hero-shots/: catalog.json
openspec/: config.yaml  project.md
openspec/changes/wave-1-chat-integration/: design.md  proposal.md  tasks.md
openspec/changes/wave-1-hero-shots/: design.md  proposal.md  tasks.md
openspec/changes/wave-1-modal-endpoint/: design.md  proposal.md  (+1 more)
src/: __init__.py
src/bot/: __init__.py  commands.py  main.py  modal_client.py  obs_notify.py  queue.py
src/common/: __init__.py  schemas.py
src/modal/: __init__.py  app.py  benchmark.py  endpoints.py  generate.py  setup_model.py
src/obs/: __init__.py  controller.py  overlays.py
tests/: __init__.py  test_benchmark.py  test_commands.py  test_hero_catalog.py  test_modal_endpoint.py  test_obs_controller.py  test_queue.py  test_schemas.py
(+13 files in other folders)
