# ABOUTME: Python project configuration for Anime Studio on Stream.
# ABOUTME: Defines dependencies for Modal GPU serving, Twitch bot, OBS control, and testing.

[project]
name = "anime-studio"
version = "0.1.0"
description = "Anime generation studio for live streaming — GPU-backed video generation with Twitch chat integration and OBS compositing"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.73",
    "fastapi>=0.115",
    "pydantic>=2.0",
    "torch>=2.0",
    "diffusers>=0.31",
    "twitchio>=2.10",
    "obsws-python>=1.7",
    "httpx>=0.27",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
